--- a/projects/book/v2.html
+++ b/projects/book/v2.html
@@ -83,9 +83,11 @@
                 console.log("Quagga initialization succeeded");
 
                 // Start QuaggaJS when the "Scan Barcode" button is clicked
-                
+                function startcan(){
                     Quagga.start();
-                
+                }
+
+                setInterval(startcan,3000)
 
                 // Detect barcode
                 Quagga.onDetected(function (result) {
