--- a/projects/book/v2.html
+++ b/projects/book/v2.html
@@ -6,10 +6,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Khand:wght@600&display=swap" rel="stylesheet">
     <style>
-        #qrimage {
-            width: 90%;
-            margin-left: 45px;
-
+        body{
+            margin: 0;
         }
 
         #scanButton {
