--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Khand:wght@600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="book.css">
 </head>
 
 <body>
@@ -13,7 +14,8 @@
         <video id="vid" autoplay></video>
         <button id="scanButton">Scan Again</button><br>
         <div id="barcodeResult"></div>
-    </div>
+		</div>
+		<script src="book.js" type="text/javascript"></script>
 </body>
 
 </html>
