--- a/projects/pairgame/index.html
+++ b/projects/pairgame/index.html
@@ -37,11 +37,15 @@
     <div id="about">
         A fun and intuitive game that challenges your memory.<br><br>Taking inspiration from memory games i created this
         game
-        as a project<br>for an entry level round for a club in my college.<br><br>I dont like to leave things in a
+        as a project<br>for an entry level round for a club in my college.<br>I dont like to leave things in a
         corner and never be seen again so<br>download it, play it, and have fun.
     </div>
-    <br>
-    <div id="imagesgame">Images from the game</div>
+    <br><br>
+    <div id="imagesgame">Images from the game :</div><br>
+    <div id="imagediv">
+        <img id="level1" src="image 1.png" alt="Level 1 image of the game">
+        <img id="level2" src="image 2.png" alt="Level 2 image of the game">
+    </div>
 
 
     <script src="index.js" type="text/javascript"></script>
