--- a/projects/pairgame/index.html
+++ b/projects/pairgame/index.html
@@ -43,8 +43,8 @@
     <br><br>
     <div id="imagesgame">Images from the game :</div><br>
     <div id="imagediv">
-        <img id="level1" src="image 1.png" alt="Level 1 image of the game">
-        <img id="level2" src="image 2.png" alt="Level 2 image of the game">
+        <img id="level1" src="https://beyondmebtw.com/projects/pairgame/image%201.png" alt="Level 1 image of the game">
+        <img id="level2" src="https://beyondmebtw.com/projects/pairgame/image%202.png" alt="Level 2 image of the game">
     </div>
 
 
