--- a/projects/pairgame/index.html
+++ b/projects/pairgame/index.html
@@ -47,6 +47,11 @@
         <img id="level2" src="https://beyondmebtw.com/projects/pairgame/image%202.png" alt="Level 2 image of the game">
     </div>
 
+    <br><br>
+
+    <footer id="footer">        
+        <p id="f2">&copy2023 Pranav Veeraghanta</p>
+    </footer>
 
     <script src="index.js" type="text/javascript"></script>
 </body>
