--- a/projects/pairgame/index.html
+++ b/projects/pairgame/index.html
@@ -50,7 +50,7 @@
     <br><br>
 
     <footer id="footer">        
-        <p id="f2">&copy2023 Pranav Veeraghanta</p>
+        <p id="f2">&copy2022 Pranav Veeraghanta. Beyondme_btw created by Pranav Veeraghanta</p>
     </footer>
 
     <script src="index.js" type="text/javascript"></script>
