--- a/projects/pairgame/index.html
+++ b/projects/pairgame/index.html
@@ -41,6 +41,9 @@
         corner and never be seen again so<br>download it, play it, and have fun.
     </div>
     <br><br>
+    <div id="journey">Read About My Journey Creating The Game:</div><br>
+    <a href="Beyondmebtw.com/blog/i-made-a-game" id="journeylink">I Made A Game</a>
+    <br><br>
     <div id="imagesgame">Images from the game :</div><br>
     <div id="imagediv">
         <img id="level1" src="https://beyondmebtw.com/projects/pairgame/image%201.png" alt="Level 1 image of the game">
@@ -50,7 +53,7 @@
     <br><br>
 
     <footer id="footer">        
-        <p id="f2">&copy2022 Pranav Veeraghanta. Beyondme_btw created by Pranav Veeraghanta</p>
+        <p id="f2">&copy2022 Pranav Veeraghanta. Game created by Pranav Veeraghanta</p>
     </footer>
 
     <script src="index.js" type="text/javascript"></script>
