--- a/projects/pairgame/index.html
+++ b/projects/pairgame/index.html
@@ -42,7 +42,7 @@
     </div>
     <br><br>
     <div id="journey">Read About My Journey Creating The Game:</div><br>
-    <a href="Beyondmebtw.com/blog/i-made-a-game" id="journeylink">I Made A Game</a>
+    <a href="https://Beyondmebtw.com/blog/i-made-a-game" id="journeylink">I Made A Game</a>
     <br><br>
     <div id="imagesgame">Images from the game :</div><br>
     <div id="imagediv">
