--- a/projects/pairgame/index.html
+++ b/projects/pairgame/index.html
@@ -31,19 +31,71 @@
 
     <a href="dist/pairgame V 0.1 .exe" download="pairgame.exe" id="thelink"></a>
 
-    <br><br><br>
-
-
-    <div id="about">
-        A fun and intuitive game that challenges your memory.<br><br>Taking inspiration from memory games i created this
-        game
-        as a project<br>for an entry level round for a club in my college.<br>I dont like to leave things in a
-        corner and never be seen again so<br>download it, play it, and have fun.
-    </div>
     <br><br>
+    <div class="breakers">
+        <div class="blackones">&spades;</div>
+        <div class="redones">&hearts;</div>
+        <div class="blackones">&clubs;</div>
+        <div class="redones">&diams;</div>
+        <div class="blackones">&spades;</div>
+        <div class="redones">&hearts;</div>
+        <div class="blackones">&clubs;</div>
+        <div class="redones">&diams;</div>
+        <div class="blackones">&spades;</div>
+        <div class="redones">&hearts;</div>
+        <div class="blackones">&clubs;</div>
+        <div class="redones">&diams;</div>
+        <div class="blackones">&spades;</div>
+    </div>
+    <br>
+
     <div id="journey">Read About My Journey Creating The Game:</div><br>
     <a href="https://Beyondmebtw.com/blog/i-made-a-game" id="journeylink">I Made A Game</a>
-    <br><br>
+
+    <br>
+
+    <div class="breakers">
+        <div class="blackones">&spades;</div>
+        <div class="redones">&hearts;</div>
+        <div class="blackones">&clubs;</div>
+        <div class="redones">&diams;</div>
+        <div class="blackones">&spades;</div>
+        <div class="redones">&hearts;</div>
+        <div class="blackones">&clubs;</div>
+        <div class="redones">&diams;</div>
+        <div class="blackones">&spades;</div>
+        <div class="redones">&hearts;</div>
+        <div class="blackones">&clubs;</div>
+        <div class="redones">&diams;</div>
+        <div class="blackones">&spades;</div>
+    </div>
+
+    <br>
+    
+    <div id="about">
+        A fun and intuitive game that challenges your memory.<br><br>Taking inspiration from classic memory games i
+        created this game<br>as a project for an entry level round for a club in my college.<br><br>I dont like to leave things in a
+        corner and never be seen again so<br>download it, play it, and have fun.    
+    </div>   
+    
+    <br>
+
+    <div class="breakers">
+        <div class="blackones">&spades;</div>
+        <div class="redones">&hearts;</div>
+        <div class="blackones">&clubs;</div>
+        <div class="redones">&diams;</div>
+        <div class="blackones">&spades;</div>
+        <div class="redones">&hearts;</div>
+        <div class="blackones">&clubs;</div>
+        <div class="redones">&diams;</div>
+        <div class="blackones">&spades;</div>
+        <div class="redones">&hearts;</div>
+        <div class="blackones">&clubs;</div>
+        <div class="redones">&diams;</div>
+        <div class="blackones">&spades;</div>
+    </div>
+    <br>
     <div id="imagesgame">Images from the game :</div><br>
     <div id="imagediv">
         <img id="level1" src="https://beyondmebtw.com/projects/pairgame/image%201.png" alt="Level 1 image of the game">
@@ -52,7 +104,7 @@
 
     <br><br>
 
-    <footer id="footer">        
+    <footer id="footer">
         <p id="f2">&copy2022 Pranav Veeraghanta. Game created by Pranav Veeraghanta</p>
     </footer>
 
