--- a/projects/pairgame/index.html
+++ b/projects/pairgame/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <a href="dist/pairgame V 0.1 .exe" download="pairgame.exe" id="thelink"></a>
+    <a href="dist/pairgame-V2.exe" download="pairgame.exe" id="thelink"></a>
 
     <br><br>
     <div class="breakers">
