--- a/projects/pairgame/index.html
+++ b/projects/pairgame/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 
+    <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/projects/pairgame/favicon.ico">   
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
