--- a/nodetest/index.html
+++ b/nodetest/index.html
@@ -8,7 +8,7 @@
 
     <script>
         document.getElementById('myButton').addEventListener('click', function() {
-            fetch('http://64.227.143.61:6123', {
+            fetch('https://64.227.143.61:6123', {
                 method: 'GET'
             })
             .then(response => {
