--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -5,9 +5,9 @@
     <meta name="My Library" description="An online library log">
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Farsan&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap');
+    </style>
 
     <link rel="stylesheet" href="index.css">
 
