--- a/shtest.html
+++ b/shtest.html
@@ -11,7 +11,7 @@
 
   <script>
     document.getElementById('fetchButton').addEventListener('click', () => {      
-      fetch('https://mylibrary.life/mylibg')
+      fetch('https://beyondmebtw.com/bmbg')
         .then(response => {
           if (!response.ok) {
             throw new Error(`HTTP error! Status: ${response.status}`);
