--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
     </div>
     <div id="intro2">
-        <p id="nm">Nice to Meet You</p>
+        <p id="nm">Nice to Meet Ya'll</p>
         <br>
         <p id="ipara">
             Hello There, I'm Pranav Veeraghanta. I'm a college student
