--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
         <hr id="horli2">
         <br>
         <p id="parag">
-            Hello there! I'm Pranav Veeraghanta, a 19-year-old college sophomore,<br> embracing the new chapter of my life after the
+            Hello there! I'm Pranav Veeraghanta, a 20-year-old college Junior,<br> embracing the new chapter of my life after the
             challenges of the pandemic.<br><br> Over the past year I have had a chance
             reinvent myself, explore<br>new things and embarkon exciting new adventures.
             <br><br>
