--- a/mmr/index.html
+++ b/mmr/index.html
@@ -18,18 +18,20 @@
     </style>
 </head>
 <body>
+    <img src="fullscreen.png" alt="Click to view fullscreen" style="display: none;" id="image">
     <script>
-        window.onload = () => {
-            setTimeout(() => {
-                if (document.documentElement.requestFullscreen) {
-                    document.documentElement.requestFullscreen();
-                } else if (document.documentElement.webkitRequestFullscreen) { // For Safari
-                    document.documentElement.webkitRequestFullscreen();
-                } else if (document.documentElement.msRequestFullscreen) { // For IE11
-                    document.documentElement.msRequestFullscreen();
-                }
-            }, 3000); // 3-second delay
-        };
+        const image = document.getElementById('image');
+
+        // Fullscreen trigger on click
+        document.body.addEventListener('click', () => {
+            if (document.documentElement.requestFullscreen) {
+                document.documentElement.requestFullscreen();
+            } else if (document.documentElement.webkitRequestFullscreen) { // For Safari
+                document.documentElement.webkitRequestFullscreen();
+            } else if (document.documentElement.msRequestFullscreen) { // For IE11
+                document.documentElement.msRequestFullscreen();
+            }
+        });
     </script>
 </body>
 </html>
