--- a/tl/index.html
+++ b/tl/index.html
@@ -9,5 +9,9 @@
     <a href="tlauncher.exe" download>
         <button>Download tlauncher.exe</button>
     </a>
+    <br><br>
+    <a href="1.21.1.zip" download>
+        <button>Download 1.21.1.zip</button>
+    </a>
 </body>
 </html>
