--- a/V2/index.html
+++ b/V2/index.html
@@ -1,10 +1,10 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Nova+Mono&display=swap');
-    </style>
+        @import url('https://fonts.googleapis.com/css2?family=Beiruti:wght@200..900&family=Borel&family=Nova+Mono&family=Playwrite+HR:wght@100..400&display=swap');
+        </style>
 </head>
 
 <body>
@@ -25,6 +25,7 @@
             <a href="https://Beyondmebtw.com/projects.html">Projects</a>
         </div>
     </div>
+    <!-- <img src="pvhome2.JPG" id="pvhome"> -->
     <br><br><br>
     <div id="ntmy">
         <div id="ntmytext">
@@ -40,8 +41,7 @@
         </div>
     </div>
 
-
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
