--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <footer id="footer">
         <p id="f1">Beyondme_BTW</p><br>
-        <p id="f2">&copy2022 Pranav Veeraghanta. Beyondme_btw created by Pranav Veeraghanta</p>
+        <p id="f2">&copy 2022–Present. Beyond Me Btw created by Pranav Veeraghanta.</p>
     </footer>
 </body>
 
