--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
 
                     <div id="link3">
-                        <a class="bloghead" href="https://beyondmebtw.wixsite.com/beyondmebtw">Blog</a> &#160;&#160;
+                        <a class="bloghead" href="https://medium.com/@beyondmebtw">Blog</a> &#160;&#160;
                     </div>
                 </div>
             </div>
