--- a/V2/index.html
+++ b/V2/index.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beyond Me Btw</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bento.css">
+    <link rel="stylesheet" href="css/profile-card.css">
+    <link rel="stylesheet" href="css/welcome-section.css">
+    <link rel="stylesheet" href="css/latest-post.css">
+    <link rel="stylesheet" href="css/get-in-touch.css">
+    <link rel="stylesheet" href="css/projects-showcase.css">
+    <link rel="stylesheet" href="css/twitter-feed.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -25,37 +33,6 @@
             <div class="profile-image">
                 <img src="images/pv1.JPG" alt="Profile image" class="profile-pic">
             </div>
-            <!-- <div class="profile-details">
-                <h2 class="profile-name">Beyond Me Btw</h2>
-                <p class="profile-title">Writer, Blogger & Film Enthusiast</p>
-                <div class="profile-social">
-                    <a href="https://github.com/beyondmebtw" target="_blank" class="profile-social-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2">
-                            <path
-                                d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
-                            </path>
-                        </svg>
-                    </a>
-                    <a href="https://linkedin.com/in/beyondmebtw" target="_blank" class="profile-social-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2">
-                            <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
-                            </path>
-                            <rect x="2" y="9" width="4" height="12"></rect>
-                            <circle cx="4" cy="4" r="2"></circle>
-                        </svg>
-                    </a>
-                    <a href="mailto:contact@beyondmebtw.com" class="profile-social-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2">
-                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
-                            </path>
-                            <polyline points="22,6 12,13 2,6"></polyline>
-                        </svg>
-                    </a>
-                </div>
-            </div> -->
         </div>
 
         <!-- Welcome section -->
@@ -68,62 +45,8 @@
             <a href="about.html" class="learn-more-btn">Learn more about me</a>
         </div>
 
-        <!-- Latest Post -->
-        <div class="bento-item latest-post">
-            <div class="latest-post-header">Latest Post</div>
-            <div class="latest-post-content">
-                <img src="images/jackal.png" alt="The Day of The Jackal" class="latest-post-img">
-                <div class="latest-post-info">
-                    <div>
-                        <div class="latest-post-title">The Day of The Jackal Review</div>
-                        <div class="latest-post-date">March 1, 2025</div>
-                        <div class="latest-post-excerpt">A deep dive into this classic thriller and its enduring legacy
-                            in both literature and film...</div>
-                    </div>
-                    <button class="read-more">Read More</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Projects Grid -->
-        <div class="bento-item projects-showcase">
-            <h2 class="section-title">Featured Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-icon">📝</div>
-                    <h3 class="project-title">Film Analysis Series</h3>
-                    <p class="project-desc">In-depth analysis of classic and contemporary films</p>
-                </div>
-                <div class="project-card">
-                    <div class="project-icon">🎬</div>
-                    <h3 class="project-title">Screenplay Workshop</h3>
-                    <p class="project-desc">Resources and tips for aspiring screenwriters</p>
-                </div>
-                <div class="project-card">
-                    <div class="project-icon">📚</div>
-                    <h3 class="project-title">Book to Film Database</h3>
-                    <p class="project-desc">Comparing literary works to their film adaptations</p>
-                </div>
-                <div class="project-card">
-                    <div class="project-icon">🎙️</div>
-                    <h3 class="project-title">Culture Podcast</h3>
-                    <p class="project-desc">Conversations about films, books, and media</p>
-                </div>
-            </div>
-            <a href="projects.html" class="view-all-btn">View All Projects</a>
-        </div>
-
-        <!-- Twitter Feed -->
-        <div class="bento-item twitter-feed">
-            <h2 class="section-title">Twitter Feed</h2>
-            <div class="tweet-container">
-                <a class="twitter-timeline" data-height="400" data-theme="light"
-                    href="https://twitter.com/beyondmebtw">Tweets by beyondmebtw</a>
-            </div>
-        </div>
-
-        <!-- Contact/Get in Touch Section -->
-        <div class="bento-item contact">
+        <!-- Contact/Get in Touch Section - Moved to top -->
+        <div class="bento-item get-in-touch">
             <div class="contact-header">Get in Touch</div>
             <div class="social-links">
                 <a href="https://github.com/beyondmebtw" class="social-link" target="_blank">
@@ -192,8 +115,82 @@
                         </div>
                     </div>
                 </a>
+
+                <a href="https://linkedin.com/in/beyondmebtw" class="social-link" target="_blank">
+                    <div class="social-item">
+                        <div class="social-icon-wrapper">
+                            <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path
+                                    d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
+                                </path>
+                                <rect x="2" y="9" width="4" height="12"></rect>
+                                <circle cx="4" cy="4" r="2"></circle>
+                            </svg>
+                        </div>
+                        <div class="social-info">
+                            <div class="social-name">LinkedIn</div>
+                            <div class="social-username">Pranav Veeraghanta</div>
+                        </div>
+                    </div>
+                </a>
             </div>
+
             <div class="contact-cta">Let's connect and collaborate!</div>
+        </div>
+
+        <!-- Latest Post -->
+        <div class="bento-item latest-post">
+            <div class="latest-post-header">Latest Post</div>
+            <div class="latest-post-content">
+                <img src="images/jackal.png" alt="The Day of The Jackal" class="latest-post-img">
+                <div class="latest-post-info">
+                    <div>
+                        <div class="latest-post-title">The Day of The Jackal Review</div>
+                        <div class="latest-post-date">March 1, 2025</div>
+                        <div class="latest-post-excerpt">A deep dive into this classic thriller and its enduring legacy
+                            in both literature and film...</div>
+                    </div>
+                    <button class="read-more">Read More</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Projects Grid -->
+        <div class="bento-item projects-showcase">
+            <h2 class="section-title">Featured Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-icon">📝</div>
+                    <h3 class="project-title">Film Analysis Series</h3>
+                    <p class="project-desc">In-depth analysis of classic and contemporary films</p>
+                </div>
+                <div class="project-card">
+                    <div class="project-icon">🎬</div>
+                    <h3 class="project-title">Screenplay Workshop</h3>
+                    <p class="project-desc">Resources and tips for aspiring screenwriters</p>
+                </div>
+                <div class="project-card">
+                    <div class="project-icon">📚</div>
+                    <h3 class="project-title">Book to Film Database</h3>
+                    <p class="project-desc">Comparing literary works to their film adaptations</p>
+                </div>
+                <div class="project-card">
+                    <div class="project-icon">🎙️</div>
+                    <h3 class="project-title">Culture Podcast</h3>
+                    <p class="project-desc">Conversations about films, books, and media</p>
+                </div>
+            </div>
+            <a href="projects.html" class="view-all-btn">View All Projects</a>
+        </div>
+
+        <!-- Twitter Feed -->
+        <div class="bento-item twitter-feed">
+            <h2 class="section-title">Twitter Feed</h2>
+            <div class="tweet-container">
+                <a class="twitter-timeline" data-height="400" data-theme="light"
+                    href="https://twitter.com/beyondmebtw">Tweets by beyondmebtw</a>
+            </div>
         </div>
     </div>
 
