--- a/V2/index.html
+++ b/V2/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bento.css">
     <link rel="stylesheet" href="css/profile-card.css">
-    <link rel="stylesheet" href="css/welcome-section.css">
+    <link rel="stylesheet" href="css/welcome-card.css">
     <link rel="stylesheet" href="css/latest-post.css">
     <link rel="stylesheet" href="css/get-in-touch.css">
     <link rel="stylesheet" href="css/projects-showcase.css">
